examples/envoy-lua-filter.yaml
# envoy demo with golang extension enabled
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
            - name: envoy.access_loggers.stdout
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                log_format:
                  json_format:
                    timestamp: "%START_TIME%"
                    trace_id: "%REQ(X-REQUEST-ID)%"
                    http_code: "%RESPONSE_CODE%"
                    path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                    method: "%REQ(:METHOD)%"
                    duration: "%DURATION%"
                    ip: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                    logger: "envoy"
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              default_source_code:
                filename: /var/lib/lua/jwt_claim_to_meta.lua
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: helloworld_service_cluster
  clusters:
  - name: helloworld_service_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: helloworld_service_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: helloworld_service
                port_value: 8080
